# archetypes

./: .gitignore  LICENSE  README.MD  archetypes-example.ipynb  archetypes.py  pyproject.toml
example_archetypes/: Suicidality-Archetypes.csv
src/archetypes/: archetypes.py
